# schema-tools

./: .clang-format  .cmake-format.yaml  .coveragerc  .gitignore  .importlinter  .mypy.ini  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  rebrand.md  ruff.toml  schema-tools-compare.md
.github/workflows/: ci.yml  docs.yml  publish.yml
cmake/modules/: FindUnity.cmake  JsmnToolsConfig.cmake  JsmnZephyrApplicationConfig.cmake  JsmnZephyrToolsConfig.cmake  SchemaToolsConfig.cmake
codegen/: build_hooks.py
codegen/src/jsmn_forge/: amalgamate.py  cli.py
codegen/src/jsmn_forge/lang/jsmn/: __init__.py  descriptor.py  filters.py  flatten.py  ir.py  mangle.py  render.py
codegen/src/jsmn_forge/lang/jsmn/runtime/: runtime.c  runtime.h
codegen/src/jsmn_forge/lang/jsmn/templates/: decls.jinja2  functions.jinja2  header.h.jinja2  schema_generated.c  schema_generated.h  tables.c.jinja2  tables.jinja2
codegen/src/jsmn_forge/node/: __init__.py  behavior.py  location.py  node.py
codegen/src/jsmn_forge/spec/: __init__.py  json_schema.py  openapi_3_1.py
codegen/src/jsmn_forge/walk/: diff.py  join.py  merge.py  normalize.py  walk.py
codegen/src/jsmn_tools/: __init__.py  __main__.py  bundle.py  cli.py  environment.py
codegen/src/jsmn_tools/collector/: zephyr.py
codegen/src/jsmn_tools/jsmn/: __init__.py  environment.py  filters.py  flatten.py  mangle.py  prepare.py  render.py
codegen/src/jsmn_tools/jsmn/runtime/: runtime.c  runtime.h
codegen/src/jsmn_tools/jsmn/templates/: jsmn_generated.c  jsmn_generated.h  preset.c  preset.h
codegen/src/jsmn_tools/lang/jsmn/: __init__.py  descriptor.py  filters.py  flatten.py  ir.py  prepare.py  render.py
codegen/src/jsmn_tools/node/: __init__.py  node.py  ref.py  uri.py
codegen/src/jsmn_tools/plugin/: __init__.py  loader.py  zephyr.py
codegen/src/jsmn_tools/spec/: __init__.py  asyncapi_3_0.py  draft.py  json_schema.py  openapi_3_1.py  parse_draft.py
codegen/src/jsmn_tools/walk/: __init__.py  diff.py  join.py  merge.py  normalize.py  prefixer.py  walk.py
codegen/src/schema_tools/: __init__.py  __main__.py  bundle.py  cli.py
codegen/src/schema_tools/lang/jsmn/: descriptor.py  filters.py  flatten.py  ir.py  mangle.py  primitives.py  render.py
codegen/src/schema_tools/lang/jsmn/runtime/: runtime.c  runtime.h
codegen/src/schema_tools/lang/jsmn/templates/: schema_generated.c  schema_generated.h
codegen/src/schema_tools/node/: ref.py
codegen/src/schema_tools/spec/: __init__.py  json_schema.py  openapi_3_1.py
codegen/src/schema_tools/walk/: __init__.py  diff.py  join.py  merge.py  normalize.py  walk.py
codegen/tests/e2e/: CMakeLists.txt  README.md  gen_test.h  listify.h  test_cursor.c  test_descriptor.c  test_fmt.c  test_generated.c  test_pack.c  test_tok.c  test_tok_ex.c  util.h
codegen/tests/e2e/templates/: jsmn.h.jinja2  jsmn_generated.c.jinja2  jsmn_generated.h.jinja2  runtime.c.jinja2  runtime.h.jinja2  schema_generated.c.jinja2  schema_generated.h.jinja2
codegen/tests/fixtures/flatten/: README.md  spec_a.yaml  spec_b.yaml
codegen/tests/fixtures/join/: merge_conflict_a.yaml  merge_conflict_b.yaml  merge_union_a.yaml  merge_union_b.yaml  openapi_sets_a.yaml  openapi_sets_b.yaml  ordered_a.yaml  ordered_b.yaml  refs.yaml  schema_dispatch_a.yaml  schema_dispatch_b.yaml  schema_sets_a.yaml  schema_sets_b.yaml
codegen/tests/fixtures/prefixer/: spec.openapi.yaml
codegen/tests/fixtures/render/: jsmn-every-type.openapi.yaml  jsmn-shim-modes.openapi.yaml  jsmn-tags.openapi.yaml  jsmn-vla.openapi.yaml  jsmn.openapi.yaml
codegen/tests/fixtures/runtime/: arrays.yaml  objects.yaml  optionals.yaml  primitives.yaml  rename.yaml
codegen/tests/fixtures/walk/: asyncapi_channels.yaml  asyncapi_components.yaml  components.yaml  paths.yaml
codegen/tests/fixtures/workspace/network/: .schema-tools.yaml
codegen/tests/fixtures/workspace/network/schemas/: ethernet.openapi.yaml  wifi.openapi.yaml
codegen/tests/fixtures/workspace/sdk/: .jsmn-tools.yaml
codegen/tests/fixtures/workspace/sdk/schemas/: auth.openapi.yaml  common.openapi.yaml
codegen/tests/fixtures/workspace/sensors/: .jsmn-tools.yaml
codegen/tests/fixtures/workspace/sensors/schemas/: humidity.openapi.yaml  temperature.openapi.yaml
codegen/tests/fixtures/zephyr/network/: .jsmn-tools.py
codegen/tests/fixtures/zephyr/network/schemas/: ethernet.openapi.yaml  wifi.openapi.yaml
codegen/tests/fixtures/zephyr/sdk/: .jsmn-tools.py
codegen/tests/fixtures/zephyr/sdk/schemas/: auth.openapi.yaml  common.openapi.yaml
codegen/tests/fixtures/zephyr/sensors/: .jsmn-tools.py
codegen/tests/integration/: test_flatten_openapi_3_1.py  test_join_openapi_3_1.py  test_jsmn_render.py  test_normalize_openapi_3_1.py  test_prefixer_openapi_3_1.py  test_spec_location.py  test_walk_asyncapi_3_0.py  test_walk_openapi_3_1.py
codegen/tests/integration/__snapshots__/: test_jsmn_render.ambr
codegen/tests/unit/: test_bundle.py  test_collector_zephyr.py  test_filters.py  test_flatten_schema_format.py  test_lang_jsmn.py  test_plugin_zephyr.py  test_spec_diff.py  test_spec_location.py  test_spec_ref.py
codegen/tests/unit/__snapshots__/: test_plugin_zephyr.ambr
docs/: bundle.md  conf.py  custom-render.md  design.md  how-it-works.md  index.md  plugins.md  reference.md
docs/_static/: custom.css  metrics_data.json
examples/amalgamate/: Makefile  README.md  main.c.jinja
examples/cmake/: CMakeLists.txt  README.md
examples/metrics/: README.md  main.c.jinja  measure.py  plot.py  sensor.yaml.jinja
examples/plugin/: .jsmn-tools.py  Makefile  README.md  catalog.md.jinja
examples/plugin/specs/: sensor.yaml
examples/shared_runtime/: CMakeLists.txt  README.md  component-a.c.jinja  component-a.h.jinja  component-a.yaml  component-b.c.jinja  component-b.h.jinja  component-b.yaml  main.c  runtime.c.jinja  runtime.h.jinja
examples/simple/: README.md  main.c  sensor.yaml
include/: jsmn_forge.h
lib/: jsmn_forge.c
src/: pub.h
tests/unit/: CMakeLists.txt  test_jsmn_forge.c  trace.txt
(+11 files in other folders)
