cmake_minimum_required(VERSION 3.14)
project(jsmn-forge-unit-tests LANGUAGES C)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../../cmake/modules")
find_package(Unity REQUIRED)

enable_testing()

# jsmn вЂ” header-only, needs one TU to carry the implementation
add_library(jsmn INTERFACE)
target_include_directories(jsmn INTERFACE "${CMAKE_SOURCE_DIR}/../../include")

# jsmn_forge runtime library
add_library(jsmn_forge STATIC "${CMAKE_SOURCE_DIR}/../../lib/jsmn_forge.c")
target_include_directories(jsmn_forge PUBLIC "${CMAKE_SOURCE_DIR}/../../include")
target_link_libraries(jsmn_forge PUBLIC jsmn)

# unit tests
add_executable(test_jsmn_forge test_jsmn_forge.c)
target_link_libraries(test_jsmn_forge PRIVATE jsmn_forge unity::framework)
add_test(NAME test_jsmn_forge COMMAND test_jsmn_forge)

#  jf_decode
#  в”њв”Ђв”Ђ jsmn_init                                    [external]
#  в”њв”Ђв”Ђ jsmn_parse                                   [external]
#  в”‚   в”њв”Ђв†’ JF_ERR_PARSE                            (r < 0)
#  в”‚   в””в”Ђв†’ JF_ERR_TYPE                             (r < 1)
#  в””в”Ђв”Ђ jf_decode_object в—„в”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђ [also public, see below]
#      в””в”Ђв†’ (propagate)
#
#
#  jf_decode_object                                  [public, recursive via
#  JF_OBJECT]
#  в”њв”Ђв†’ JF_ERR_TYPE                                  (not JSMN_OBJECT)
#  в”њв”Ђв”Ђ memset                                        [libc]
#  в”њв”Ђв”Ђ tok_eq                                        [leaf: bool]
#  в”њв”Ђв”Ђ tok_is_null                                   [leaf: bool]
#  в”‚   в””в”Ђв†’ JF_ERR_TYPE                              (null on non-optional)
#  в”њв”Ђв”Ђ decode_array
#  в”‚   в”њв”Ђв†’ JF_ERR_TYPE                              (not JSMN_ARRAY)
#  в”‚   в”њв”Ђв†’ JF_ERR_OVERFLOW                          (count mismatch)
#  в”‚   в”њв”Ђв”Ђ elem_size                                 [leaf: uint16_t]
#  в”‚   в”њв”Ђв”Ђ decode_value
#  в”‚   в”‚   в”њв”Ђв”Ђ tok_bool                              [leaf]
#  в”‚   в”‚   в”‚   в”њв”Ђв†’ JF_ERR_TYPE                      (not primitive / not t/f)
#  в”‚   в”‚   в”‚   в””в”Ђв†’ JF_OK
#  в”‚   в”‚   в”њв”Ђв”Ђ decode_unsigned
#  в”‚   в”‚   в”‚   в”њв”Ђв”Ђ tok_uint                          [leaf]
#  в”‚   в”‚   в”‚   в”‚   в”њв”Ђв†’ JF_ERR_TYPE                  (not primitive / non-digit)
#  в”‚   в”‚   в”‚   в”‚   в”њв”Ђв†’ JF_ERR_OVERFLOW              (accumulator overflow)
#  в”‚   в”‚   в”‚   в”‚   в””в”Ђв†’ JF_OK
#  в”‚   в”‚   в”‚   в”њв”Ђв”Ђ check_uint_range                  [leaf]
#  в”‚   в”‚   в”‚   в”‚   в”њв”Ђв†’ JF_ERR_OVERFLOW              (value > type max)
#  в”‚   в”‚   в”‚   в”‚   в”њв”Ђв†’ JF_ERR_TYPE                  (bad type tag)
#  в”‚   в”‚   в”‚   в”‚   в””в”Ђв†’ JF_OK
#  в”‚   в”‚   в”‚   в””в”Ђв†’ JF_OK
#  в”‚   в”‚   в”њв”Ђв”Ђ decode_signed
#  в”‚   в”‚   в”‚   в”њв”Ђв”Ђ tok_int                           [leaf]
#  в”‚   в”‚   в”‚   в”‚   в”њв”Ђв†’ JF_ERR_TYPE                  (not primitive / non-digit)
#  в”‚   в”‚   в”‚   в”‚   в”њв”Ђв†’ JF_ERR_OVERFLOW              (accumulator / magnitude)
#  в”‚   в”‚   в”‚   в”‚   в””в”Ђв†’ JF_OK
#  в”‚   в”‚   в”‚   в”њв”Ђв”Ђ check_int_range                   [leaf]
#  в”‚   в”‚   в”‚   в”‚   в”њв”Ђв†’ JF_ERR_OVERFLOW              (value outside type range)
#  в”‚   в”‚   в”‚   в”‚   в”њв”Ђв†’ JF_ERR_TYPE                  (bad type tag)
#  в”‚   в”‚   в”‚   в”‚   в””в”Ђв†’ JF_OK
#  в”‚   в”‚   в”‚   в””в”Ђв†’ JF_OK
#  в”‚   в”‚   в”њв”Ђв”Ђ tok_double                            [leaf]
#  в”‚   в”‚   в”‚   в”њв”Ђв†’ JF_ERR_TYPE                      (not primitive / strtod fail)
#  в”‚   в”‚   в”‚   в”њв”Ђв†’ JF_ERR_OVERFLOW                  (token too long for buf)
#  в”‚   в”‚   в”‚   в””в”Ђв†’ JF_OK
#  в”‚   в”‚   в”њв”Ђв”Ђ [JF_STRING inline]
#  в”‚   в”‚   в”‚   в”њв”Ђв†’ JF_ERR_TYPE                      (not JSMN_STRING)
#  в”‚   в”‚   в”‚   в”њв”Ђв†’ JF_ERR_OVERFLOW                  (len >= fd->count)
#  в”‚   в”‚   в”‚   в””в”Ђв†’ JF_OK
#  в”‚   в”‚   в”њв”Ђв”Ђ [JF_OBJECT]
#  в”‚   в”‚   в”‚   в”њв”Ђв†’ JF_ERR_TYPE                      (no child)
#  в”‚   в”‚   в”‚   в””в”Ђв”Ђ jf_decode_object                  [recursive в†‘]
#  в”‚   в”‚   в””в”Ђв†’ JF_ERR_TYPE                          (default / unknown type)
#  в”‚   в””в”Ђв”Ђ jf_tok_skip                               [leaf: int]
#  в”њв”Ђв”Ђ decode_value                                  (same subtree as above)
#  в”њв”Ђв”Ђ jf_tok_skip                                   [leaf: int]
#  в”њв”Ђв†’ JF_ERR_REQUIRED                              (missing required field)
#  в””в”Ђв”Ђ jf_tok_skip в†’ return value                    (success: token count)
#
#
#  jf_encode                                         [public, recursive via
#  JF_OBJECT]
#  в”њв”Ђв†’ JF_ERR_BUFFER                                (dlen exhausted, many sites)
#  в”њв”Ђв”Ђ emit_key                                      [leaf]
#  в”‚   в””в”Ђв†’ JF_ERR_BUFFER
#  в”њв”Ђв”Ђ encode_array
#  в”‚   в”њв”Ђв†’ JF_ERR_BUFFER
#  в”‚   в”њв”Ђв”Ђ elem_size                                 [leaf: uint16_t]
#  в”‚   в””в”Ђв”Ђ encode_value
#  в”‚       в”њв”Ђв”Ђ [JF_BOOL inline]
#  в”‚       в”‚   в””в”Ђв†’ JF_ERR_BUFFER
#  в”‚       в”њв”Ђв”Ђ emit_uint                             [leaf]
#  в”‚       в”‚   в””в”Ђв†’ JF_ERR_BUFFER
#  в”‚       в”њв”Ђв”Ђ emit_int
#  в”‚       в”‚   в”њв”Ђв”Ђ emit_uint                         [leaf]
#  в”‚       в”‚   в”‚   в””в”Ђв†’ JF_ERR_BUFFER
#  в”‚       в”‚   в””в”Ђв†’ JF_ERR_BUFFER                    (sign byte)
#  в”‚       в”њв”Ђв”Ђ [JF_FLOAT/DOUBLE inline вЂ” snprintf]
#  в”‚       в”‚   в””в”Ђв†’ JF_ERR_BUFFER
#  в”‚       в”њв”Ђв”Ђ emit_str                              [leaf, bounded by maxlen]
#  в”‚       в”‚   в””в”Ђв†’ JF_ERR_BUFFER
#  в”‚       в”њв”Ђв”Ђ [JF_OBJECT]
#  в”‚       в”‚   в”њв”Ђв†’ JF_ERR_TYPE                      (no child)
#  в”‚       в”‚   в””в”Ђв”Ђ jf_encode                         [recursive в†‘]
#  в”‚       в””в”Ђв†’ JF_ERR_TYPE                          (default / unknown type)
#  в”њв”Ђв”Ђ encode_value                                  (same subtree as above)
#  в””в”Ђв†’ JF_OK                                        (returns byte count)
#
#
#  jf_len                                            [public, recursive via
#  JF_OBJECT]
#  в”њв”Ђв”Ђ strlen                                        [libc]
#  в”њв”Ђв”Ђ len_array
#  в”‚   в”њв”Ђв”Ђ elem_size                                 [leaf: uint16_t]
#  в”‚   в””в”Ђв”Ђ len_value
#  в”‚       в”њв”Ђв”Ђ len_uint                              [leaf: uint32_t]
#  в”‚       в”њв”Ђв”Ђ len_int
#  в”‚       в”‚   в””в”Ђв”Ђ len_uint                          [leaf: uint32_t]
#  в”‚       в”њв”Ђв”Ђ [JF_FLOAT/DOUBLE inline вЂ” snprintf]
#  в”‚       в”њв”Ђв”Ђ len_str                               [leaf, bounded by maxlen]
#  в”‚       в”њв”Ђв”Ђ [JF_OBJECT]
#  в”‚       в”‚   в””в”Ђв”Ђ jf_len                            [recursive в†‘]
#  в”‚       в””в”Ђв”Ђ 0                                     (default / unknown type)
#  в”њв”Ђв”Ђ len_value                                     (same subtree as above)
#  в””в”Ђв†’ uint32_t                                     (always succeeds)
#
#
#  jf_tok_skip                                       [public, leaf]
#  в””в”Ђв†’ int                                          (always succeeds)
#
#  Summary of all possible error returns by entry point:
#
#  Entry point: jf_decode
#  Possible errors: JF_ERR_PARSE, JF_ERR_TYPE, JF_ERR_REQUIRED, JF_ERR_OVERFLOW
#  в”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђ
#  Entry point: jf_decode_object
#  Possible errors: JF_ERR_TYPE, JF_ERR_REQUIRED, JF_ERR_OVERFLOW
#  в”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђ
#  Entry point: jf_encode
#  Possible errors: JF_ERR_BUFFER, JF_ERR_TYPE
#  в”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђ
#  Entry point: jf_len
#  Possible errors: (none вЂ” always returns a count)
#  в”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђ
#  Entry point: jf_tok_skip
#  Possible errors: (none вЂ” always returns a count)
#
#вњ» Crunched for 45s
